 TODO list:


 - fix settings
 - add how to use
 - show const result in number
 - add access to serial port
 - improve rendering algorithm (when there are many points)
 - fix colors in dark theme
 - make frequency slider logarithmic
 - copy handler to input
 - fix discontinuity (that sucks)
 - add audio normalization
 - add audio current view

parser:
 - BUG: latex integral regex is not working correctly
 - BUG: parser class default resolution is 0 (integral evaluation stucks in a loop)
 - fix empty parentheses
 - add derivative ' notation
 - add base to logarithms
 - add support for fn^x(t)
 - add degree operator
 - fix equations (solve them)
 - add polar functions
 - add inequalities
 - add random, lcm, gcd, nCr and nPr functions


 CHANGELOG:

 Done (v1.7)
 - separated graph.ts to a library
 - added virtual keyboard
 - made top button toolbar sticky
 - fixed variable slider input if higher than max
 - improved web worker code
 - add save to local storage / export
 - moved string literals to language file
 - sidebar is now resizable
 - sidebar sticks to bottom on mobile phones (viewport < 500px)

 Done (v1.6.1)
 - fixed bug with capital letters in custom functions
 - removed jQuery
 - fixed bug: changing audio line properties has no effect
 - fixed error icon color
 - fixed audio line inspect mode
 - discontinuity is disabled for audio and raw data lines
 - fixed loop mode on file playback

 Done (v1.6)
 - added custom variables
 - added custom functions
 - separated expression and function generator ui
 - added audio playback for files
 - moved worker and calculation code from graph.ts to calculator.ts
 - fixed old play icon on audio settings page
 - changed audio line rendering
 - added variable sliders
 - fixed degrees
 - added export audio to WAV
 - added warning about audio clipping
 - fixed bug with infinite loop when removed line (and calculation was active)
 - fixed bugs with some margins
 - returned green borders on mobile devices